# teetest

./: .gitignore  .gitmodules  CMakeLists.txt  mk.cmd  mk.sh  rcmake.sh  readme.md  todo.md
cad/: sym-lib-table  teetest.kicad_sym  test1.kicad_prl  test1.kicad_pro  test1.kicad_sch  test_40.kicad_sch
cmake/: ccmake.cmake  options.cmake  toolchain.cmake
console/: CMakeLists.txt  console.cpp  eth_client.cpp  eth_client.h  inproc.cpp
doc/alg/: model.md
julia/: eth_test.jl  mlog.jl
julia/teelog/: Project.toml
julia/teelog/src/: teelog.jl
julia/tmodel/: Project.toml
julia/tmodel/src/: tmodel.jl
julia/tmodel/test/: simple_test.jl
nav/: imu_alg.cpp  imu_alg.h  xmnavstruct.cpp  xmnavstruct.h  xmnavtools.cpp  xmnavtools.h
pjrc/libraries/Audio/: synth_wavetable.cpp  synth_wavetable.h
pjrc/libraries/Encoder/: Encoder.h
pjrc/libraries/Encoder/examples/SpeedTest/: SpeedTest.pde
pjrc/libraries/IRremote/: irRecv.cpp
pjrc/libraries/SPI/: SPI.cpp  SPI.h
pjrc/libraries/SdFat/examples/AvrAdcLogger/: AvrAdcLogger.ino
pjrc/libraries/SdFat/src/: RingBuf.h
pjrc/libraries/SdFat/src/DigitalIO/: DigitalPin.h
pjrc/libraries/SdFat/src/SdCard/: SdioTeensy.cpp
pjrc/libraries/SdFat/src/SpiDriver/: SdSpiBareUnoDriver.h
pjrc/libraries/SdFat/src/common/: SysCallBareUno.cpp
pjrc/teensy4/: core_cm7.h  wiring.h
src/: cmdhandler.cpp  cmdhandler.h  eth.cpp  eth.h  ir.cpp  logfile.cpp  logfile.h  logsend.cpp  logsend.h  memsic.cpp  memsic.h  motordriver.cpp  motordriver.h  power.cpp  power.h  robot.cpp  robot.h  teetools.cpp  teetools.h  ttpins.h  ttsetup.cpp
test/blink/: blink.cpp
test/empty/: Makefile  main.cpp
test/oled_display/: main.cpp
test/unit/: CMakeLists.txt  utest.cpp
